Fixing footer contact info whitespace and breakpoints

--- a/_sass/includes/footer.scss
+++ b/_sass/includes/footer.scss
@@ -20,6 +20,7 @@ footer {
 	& p {
 		margin: 24px;
 		max-width: 50%;
+		white-space: pre;
 	}
 
 	@media screen and (max-width: $screen_small) {
